# streamcutter

./: CMakeLists.txt  audio_filter.cpp  audio_filter.h  avio_write.c  log.h  main.cpp  segmenter.cpp  segmenter.h  stream_encoder.cpp  stream_encoder.h  stream_info.cpp  stream_info.cpp.autosave  stream_info.h  task_manager_impl.cpp
ms/: audio_encoder.cpp  audio_encoder.h  audio_mixer.cpp  audio_mixer.h  decoder.cpp  decoder.h  demuxer.cpp  demuxer.h  input_file.cpp  input_file.h  ms_util.cpp  ms_util.h  muxer.cpp  muxer.h  output_file.cpp  output_file.h  video_encoder.cpp  video_encoder.h  video_overlayer.cpp  video_overlayer.h
protos/: segmenter.grpc.pb.cc  segmenter.grpc.pb.h  segmenter.pb.cc  segmenter.pb.h  segmenter.proto  test.sh
